# controllers/boards/transportBoard.js
@@ -1,5 +1,0 @@
-import Board from "../../models/board.js";
-
-const transportBoard = async (req, res) => {};
-
-export default transportBoard;
